# academic_review_tool

./: MANIFEST.in  README.md  SECURITY.md  __init__.py  classes.py  notes.txt  pybliometrics.cfg  pyproject.toml  requirements.txt
.github/workflows/: apisec-scan.yml  codeql.yml
art/: __init__.py
art/classes/: __init__.py  activitylog.py  affiliations.py  attrs.py  authors.py  citation_crawler.py  entities.py  funders.py  networks.py  properties.py  references.py  results.py  review.py
art/datasets/: __init__.py
art/datasets/countries/: countries_all.txt
art/datasets/languages/: language_codes.txt
art/datasets/names/: nltk_names.txt
art/datasets/stopwords/: en_stopwords.txt  html_stopwords.txt  stopwords.py
art/exporters/: __init__.py  general_exporters.py  network_exporters.py
art/importers/: __init__.py  bibtex.py  crossref.py  jstor.py  orcid.py  pdf.py  scopus.py  search.py  wos.py
art/internet/: archives.py  crawlers.py  parsers.py  scrapers.py  search.py  webanalysis.py
art/networks/: __init__.py  network_functions.py
art/text/: information_extraction.py
art/utils/: basics.py  cleaners.py
art/wosstarter_python_client_master/clarivate/wos_starter/client/models/: __init__.py
classes/: __init__.py  activitylog.py  affiliations.py  authors.py  citation_crawler.py  classes.py  entities.py  funders.py  networks.py  references.py  results.py  review.py
datasets/: __init__.py
datasets/languages/: language_names.json  languages_en.json
datasets/stopwords/: stopwords.py
exporters/: general_exporters.py  network_exporters.py
importers/: crossref.py  jstor.py  orcid.py  pdf.py  scopus.py  search.py  wos.py
internet/: crawlers.py  scrapers.py  shodan.py  webanalysis.py
networks/: network_functions.py
text/: __init__.py  textanalysis.py
utils/: __init__.py  basics.py  cleaners.py  globaltools.py
