[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "academic_review_tool"
version = "1.1.0"
description = "The Academic Review Tool (ART) is a package for performing academic reviews and bibliometric analyses in Python. It offers capabilities for discovering, retrieving, and analysing academic literature at scale."
readme = "README.md"
authors = [ 
        {name = "Jamie Hancock", email = "academic_review_tool@outlook.com"},
        ]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
            ]

keywords = ["literature review", "academic", "bibliometrics", "crossref", "scopus", "web of science"]
dependencies = [
    "beautifulsoup4>=4.11.1", 
    "cloudscraper>=1.2.71", 
    "comcrawl>=1.0.2", 
    "courlan>=0.9.5", 
    "crossrefapi>=1.6.0", 
    "geocoder>=1.38.1", 
    "geopy>=2.4.1", 
    "matplotlib>=3.8.2", 
    "networkx>=2.8.4", 
    "nltk>=3.8.1", 
    "numpy>=1.23.0", 
    "pandas>=1.4.4", 
    "pyorcid>=1.2.0", 
    "PyPDF2>=3.0.1", 
    "python-docx>=1.1.0", 
    "python-igraph>=0.10.6", 
    "python-Levenshtein>=0.25.0",
    "pybliometrics>=4.1",
    "pybtex",
    "igraph>=0.10.6", 
    "Levenshtein>=0.25.0", 
    "requests", 
    "scikit_learn>=1.4.0", 
    "selectolax>=0.3.17", 
    "selenium>=4.22.0", 
    "trafilatura>=1.6.3", 
    "wayback>=0.4.3", 
    "selenium>=4.18.1", 
    "selectolax>=0.3.17"
    ]


requires-python = ">=3.9"


[project.urls]
Homepage = "https://github.com/alan-turing-institute/academic_review_tool"

[project.scripts]
art = "art.__init__:main"